Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3023

Crash: impala::BloomFilter::Or(impala::BloomFilter const&)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.5.0
    • Impala 2.5.0
    • Backend

    Description

      This came up while running TCH-DS on the stress cluster. I've only seen this once and that was using the release build.

      Backtrace:

      (gdb) bt
      #0  0x0000003fa8232625 in raise () from /lib64/libc.so.6
      #1  0x0000003fa8233e05 in abort () from /lib64/libc.so.6
      #2  0x00007fb50f2a3c55 in os::abort(bool) () from /opt/toolchain/sun-jdk-64bit-1.7.0.75/jre/lib/amd64/server/libjvm.so
      #3  0x00007fb50f425cd7 in VMError::report_and_die() () from /opt/toolchain/sun-jdk-64bit-1.7.0.75/jre/lib/amd64/server/libjvm.so
      #4  0x00007fb50f2a8b6f in JVM_handle_linux_signal () from /opt/toolchain/sun-jdk-64bit-1.7.0.75/jre/lib/amd64/server/libjvm.so
      #5  <signal handler called>
      #6  0x0000000000ad19d0 in impala::BloomFilter::Or(impala::BloomFilter const&) ()
      #7  0x00000000009dd148 in impala::RuntimeFilterBank::UpdateFilterFromLocal(unsigned int, impala::BloomFilter*) ()
      #8  0x0000000000be7138 in impala::PartitionedHashJoinNode::PublishRuntimeFilters(impala::RuntimeState*) ()
      #9  0x0000000000bec92a in impala::PartitionedHashJoinNode::ConstructBuildSide(impala::RuntimeState*) ()
      #10 0x0000000000c11e8e in impala::BlockingJoinNode::BuildSideThread(impala::RuntimeState*, impala::Promise<impala::Status>*) ()
      #11 0x0000000000b42a97 in impala::Thread::SuperviseThread(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::Promise<long>*) ()
      #12 0x0000000000b433b4 in boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void ()()> >, boost::_bi::value<impala::Promise<long>*> > > >::run() ()
      #13 0x0000000000d80afa in ?? ()
      #14 0x0000003fa86079d1 in start_thread () from /lib64/libpthread.so.0
      #15 0x0000003fa82e88fd in clone () from /lib64/libc.so.6
      
      (gdb) f 6
      #6  0x0000000000ad19d0 in impala::BloomFilter::Or(impala::BloomFilter const&) ()
      
      (gdb) l
      1	../../../gcc-4.9.2/libgcc/libgcc2.c: No such file or directory.
      	in ../../../gcc-4.9.2/libgcc/libgcc2.c
      (gdb) quit
      

      The core file is on vc0714.halxg.cloudera.com. If I see this again with a debug build, I'll post more info.

      Version:

      impalad version 2.5.0-cdh5-INTERNAL RELEASE (build 53cc3a3d3ac00e0e6b8db273dc7558cec89279ad)
      Built on Wed, 17 Feb 2016 09:09:14 PST

      Attachments

        Activity

          People

            henryr Henry Robinson
            caseyc casey
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: